--- a/master.postmortem.lyx
+++ b/master.postmortem.lyx
@@ -1,7 +1,9 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
-\lyxformat 474
+#LyX 2.2 created this file. For more info see http://www.lyx.org/
+\lyxformat 508
 \begin_document
 \begin_header
+\save_transient_properties true
+\origin unavailable
 \textclass scrbook
 \begin_preamble
 \usepackage[nottoc]{tocbibind} 
@@ -53,16 +55,16 @@ End
 \language_package default
 \inputencoding utf8
 \fontencoding global
-\font_roman default
-\font_sans default
-\font_typewriter default
-\font_math auto
+\font_roman "default" "default"
+\font_sans "default" "default"
+\font_typewriter "default" "default"
+\font_math "auto" "auto"
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100
-\font_tt_scale 100
+\font_sf_scale 100 100
+\font_tt_scale 100 100
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -325,6 +327,10 @@ Anderson und Dawar (2014)
 \begin_layout Theorem
 Die folgenden Paare von Anfragenklassen sind auf endlichen Strukturen äquivalent
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -375,6 +381,10 @@ name "thm:fo"
 
 Die folgenden Paare von Anfragenklassen sind auf endlichen Strukturen äquivalent
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -453,6 +463,10 @@ Für die
 \end_inset
 
 -Logik gilt:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -753,7 +767,10 @@ Für
  entfernt werden.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -963,7 +980,10 @@ Umgekehrt bezeichnet
  analog.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -987,6 +1007,10 @@ Für jede Funktion
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -1052,7 +1076,10 @@ Für
 .
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -1283,7 +1310,10 @@ Die Menge
 .
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -1359,7 +1389,10 @@ u_{j} & u_{i}
  notiert.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -1436,7 +1469,10 @@ Eine relationale Signatur
  notiert.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -1481,6 +1517,10 @@ Eine endliche
 \end_inset
 
 .
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -1833,7 +1873,10 @@ reference "def:orbit"
  von einem Automorphismus abgebildet werden kann.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -1869,6 +1912,10 @@ Zwei Strukturen können vereinigt werden, wenn sie entweder disjunkte Signaturen
 \end_inset
 
  gelte:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -2000,6 +2047,10 @@ So gilt für die Abbildung
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -2057,7 +2108,10 @@ Damit ist
 .
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -2114,7 +2168,10 @@ Für eine Relation
  induzierte Teilstruktur.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -2302,7 +2359,10 @@ Für zwei Strukturen
  existiert.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -2857,7 +2917,10 @@ q_{\varphi^{\beta}\left(\bar{x}'\right)}\coloneqq\left\{ \bar{a}\in A^{\ell}\mid
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -3311,7 +3374,10 @@ Weil
 , der die Datenkomplexität unberührt lässt.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -3343,7 +3409,10 @@ Der Quantorenrang einer Formel sei die maximale Anzahl der geschachtelten
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -3505,6 +3574,10 @@ Wir definieren die (nicht disjunkten) Mengen der
 \end_inset
 
  wie folgt:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -4379,7 +4452,10 @@ Sei
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -4432,7 +4508,10 @@ te Bit der Binärdarstellung von
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -4604,6 +4683,10 @@ Die
 \end_inset
 
 -Logik um die folgende Regel:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -4743,6 +4826,10 @@ Die
 \end_inset
 
 -Logik um die folgende Regel:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -4805,7 +4892,10 @@ gelte:
 \end_layout
 
 \end_deeper
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -4875,6 +4965,10 @@ Die
 \end_inset
 
 -Logik um die folgende Regel:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -4993,6 +5087,10 @@ pseudo-atomare
 \end_inset
 
  Teilformel, die einen Zählterm enthält, wie folgt:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -5099,6 +5197,10 @@ Jede
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -5173,6 +5275,10 @@ Schließlich ist jede
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -5426,7 +5532,10 @@ Wir bezeichnen mit
 -Logik.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -5600,7 +5709,10 @@ Im folgenden stehe
 ll ist.)
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -5633,6 +5745,10 @@ Sei
 \end_inset
 
  besteht aus den folgenden Komponenten: 
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -5807,7 +5923,10 @@ Outputs
 .
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -5853,7 +5972,10 @@ W^{\mathcal{C}} & \coloneqq & W\\
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -5904,6 +6026,10 @@ Der
 \end_inset
 
  zuweist, und ist rekursiv wie folgt definiert:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -6518,7 +6644,10 @@ Die Größe
 .
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -6600,7 +6729,10 @@ In diesem Fall definieren wir für jede Struktur
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -6675,6 +6807,10 @@ reference "def:isomorphism"
 \end_inset
 
  die folgenden Bedingungen erfüllt:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -6869,6 +7005,10 @@ Die Tiefe
 \end_inset
 
 
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -6938,6 +7078,10 @@ Induktionsschritt
 \end_inset
 
 : 
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -7228,7 +7372,10 @@ Der Schaltkreis ist invariant, und akzeptiert alle vollständigen
  induziert keinen Automorphismus.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -7388,7 +7535,10 @@ q_{\bar{\mathcal{C}}}\left(\mathfrak{A}\right)\coloneqq q_{\mathcal{C}_{\left|A\
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -7420,7 +7570,10 @@ Für eine Komplexitätsklasse
  ist.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -7651,7 +7804,10 @@ Tiefe
  definiert.
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -7665,6 +7821,10 @@ Sei
 \end_inset
 
  eine beliebige relationale Signatur.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -7892,6 +8052,10 @@ Per induktiver Konstruktion über den Aufbau von
 \end_inset
 
  angegeben, und damit die Symmetrie nachgewiesen.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -7917,6 +8081,10 @@ Falls
 \end_inset
 
  Gates.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8027,6 +8195,10 @@ Falls
 \end_inset
 
 ).
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8132,6 +8304,10 @@ Falls
 \end_inset
 
  mit der folgenden Erweiterung.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8274,6 +8450,10 @@ Für die Gates und Kanten der Schaltkreise
 \end_inset
 
  per Annahme bereits korrekt.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8376,6 +8556,10 @@ Falls
 \end_inset
 
  wie folgt erweitert:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8514,6 +8698,10 @@ Falls
 \end_inset
 
  wie folgt erweitert:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8666,6 +8854,10 @@ Auf den Gates von
 \end_inset
 
 .
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8764,6 +8956,10 @@ reference "alg:fo-circ"
 \end_inset
 
  berechnet.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8818,6 +9014,10 @@ Berechne(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8827,6 +9027,10 @@ Für jedes
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8857,6 +9061,10 @@ Für jede direkte Teilformel
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8874,6 +9082,10 @@ Für jedes
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8883,6 +9095,10 @@ Für jedes
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -8900,6 +9116,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -9318,6 +9538,10 @@ Anschließend konstruieren wir daraus den
 \end_inset
 
  bleibt.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -9476,6 +9700,10 @@ Es wird nun nachgewiesen, dass
 \end_inset
 
  unverändert.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -9489,6 +9717,10 @@ Für
 \end_inset
 
  gilt:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -9531,6 +9763,10 @@ Für
 \end_inset
 
  gilt:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -9813,6 +10049,10 @@ reference "lem:oracle-circuit"
 \end_inset
 
 , wobei wir die folgende induktive Konstruktion verwenden:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -9855,6 +10095,10 @@ Falls
 
  gilt.
  
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -10251,6 +10495,10 @@ d.h.
 .
  (In der Implementierung fügen wir den Zählquantor effektiv als Subroutine
  in die bestehende Konstruktion ein.)
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -10398,6 +10646,10 @@ Symmetrie: Der neue Schaltkreis ist offensichtlich nicht symmetrisch bezüglich
 
 -Konstante.
  
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -10825,6 +11077,10 @@ Sei
 
  die Eingabegröße.
  Die Behauptung wird induktiv über den Aufbau der Formel nachgewiesen.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -10942,6 +11198,10 @@ Wir bauen einen neuen Schaltkreis für
 \end_inset
 
 -mal iteriert.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -11898,7 +12158,10 @@ Der Mengenstabilisator von
 
 \end_layout
 
-\begin_layout --Separator--
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -12278,6 +12541,10 @@ Für
 \end_inset
 
  gilt:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -13566,6 +13833,10 @@ elation
 \end_inset
 
  genau dann wenn
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -13662,6 +13933,10 @@ G' & \coloneqq & G\backslash\left(E\backslash\left\{ g\right\} \right)\\
 \end_inset
 
 
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -13729,6 +14004,10 @@ Der Schaltkreis
 \end_inset
 
 ) nachgewiesen wird:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -13895,6 +14174,10 @@ Symmetrie: Wenn alle Äquivalenzklassen
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14058,6 +14341,10 @@ Input:
 
 \begin_layout LyX-Code
 Main:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14067,6 +14354,10 @@ Für jedes Gate
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14080,6 +14371,10 @@ Falls kein Gate
 \end_inset
 
 ) existiert:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14100,6 +14395,10 @@ Rigid(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14125,6 +14424,10 @@ Für alle
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14143,6 +14446,10 @@ Für jedes Gate
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14156,6 +14463,10 @@ Falls kein Gate
 \end_inset
 
 ) existiert:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14180,6 +14491,10 @@ Für alle Vorgänger
 \end_inset
 
 .
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14208,6 +14523,10 @@ Equiv(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14233,6 +14552,10 @@ Für jeden Vorgänger
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14261,6 +14584,10 @@ Für jeden Vorgänger
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14286,6 +14613,10 @@ Für jeden Vorgänger
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14562,6 +14893,10 @@ Durch Induktion über die Tiefe wird bewiesen, dass
 \end_inset
 
  gilt.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14719,6 +15054,10 @@ reference "lem:rigide-eindeutig"
 
  wird gezeigt, dass der eindeutige Automorphismus in Polynomialzeit bestimmt
  wird:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14940,6 +15279,10 @@ Input:
 
 \begin_layout LyX-Code
 Main:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14949,6 +15292,10 @@ Für
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14958,6 +15305,10 @@ Für
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -14974,6 +15325,10 @@ Falls Aut(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15014,6 +15369,10 @@ Aut(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15051,6 +15410,10 @@ Für
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15081,6 +15444,10 @@ Für jeden Vorgänger
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15098,6 +15465,10 @@ Falls kein Vorgänger
 \end_inset
 
 ) existiert:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15217,6 +15588,10 @@ reference "lem:algo-auto"
 \end_inset
 
  induzierter Automorphismus.
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15559,6 +15934,10 @@ Trägermenge(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15579,6 +15958,10 @@ Für alle
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15595,6 +15978,10 @@ Für alle
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15611,6 +15998,10 @@ reference "alg:aut"
 \end_inset
 
 )
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15629,6 +16020,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15651,6 +16046,10 @@ Für alle
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15660,6 +16059,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -15687,11 +16090,19 @@ Orbit(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
 \begin_layout LyX-Code
 \begin_inset Formula $\bar{s}\leftarrow\mathtt{Trägermenge}\left(g\right)$
+\end_inset
+
+
+\begin_inset Separator latexpar
 \end_inset
 
 
@@ -15704,6 +16115,10 @@ Für
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -16869,7 +17284,7 @@ key "AD2014"
 \begin_layout Subsection
 \begin_inset CommandInset label
 LatexCommand label
-name "sub:circuit-def"
+name "subsec:circuit-def"
 
 \end_inset
 
@@ -17107,7 +17522,7 @@ Schließlich definieren wir die Ordnung der Elemente
 \begin_layout Subsection
 \begin_inset CommandInset label
 LatexCommand label
-name "sub:circuit-eval"
+name "subsec:circuit-eval"
 
 \end_inset
 
@@ -17710,7 +18125,7 @@ j\in\left[1,d\right]
 \begin_layout Subsection
 \begin_inset CommandInset label
 LatexCommand label
-name "sub:p-poly-sbc"
+name "subsec:p-poly-sbc"
 
 \end_inset
 
@@ -17733,7 +18148,7 @@ Für eine
  (siehe Abschnitt 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sub:circuit-def"
+reference "subsec:circuit-def"
 
 \end_inset
 
@@ -17745,7 +18160,7 @@ reference "sub:circuit-def"
  Der Abschnitt 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sub:circuit-eval"
+reference "subsec:circuit-eval"
 
 \end_inset
 
@@ -17987,6 +18402,10 @@ NF(
 \end_inset
 
 ):
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -17996,6 +18415,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18038,6 +18461,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18076,6 +18503,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18098,6 +18529,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18111,6 +18546,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18133,6 +18572,10 @@ Falls
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18155,6 +18598,10 @@ Erzeuge einen alternierenden Weg der Länge
 \end_deeper
 \begin_layout LyX-Code
 Sonst:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18202,6 +18649,10 @@ Für jeden Vorgänger
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18217,6 +18668,10 @@ NF(
 \end_deeper
 \begin_layout LyX-Code
 Main:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18226,6 +18681,10 @@ Für
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18235,6 +18694,10 @@ Falls
 \end_inset
 
  keine Nachfolger hat:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18264,6 +18727,10 @@ Für
 \end_inset
 
 :
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -18502,7 +18969,7 @@ reference "alg:orbits"
 Analog zu Abschnitt 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sub:circuit-def"
+reference "subsec:circuit-def"
 
 \end_inset
 
@@ -18534,7 +19001,7 @@ reference "sub:circuit-def"
  aus Abschnitt 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sub:circuit-eval"
+reference "subsec:circuit-eval"
 
 \end_inset
 
@@ -18603,7 +19070,7 @@ Nun berechnet
  Analog zum Abschnitt 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "sub:circuit-eval"
+reference "subsec:circuit-eval"
 
 \end_inset
 
@@ -18999,6 +19466,10 @@ Nun gelte für jedes Element
 \end_inset
 
  mindestens eine der folgenden Aussagen:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -19134,6 +19605,10 @@ key "AMSS2012-locality"
 \end_inset
 
 ).
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
@@ -19695,6 +20170,10 @@ Es wird per
 \end_inset
 
  geht Duplicator wie folgt vor:
+\begin_inset Separator latexpar
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
