Rename ä -> ae because git has a hard time with it.

--- a/postmortem/master.lyx
+++ b/postmortem/master.lyx
@@ -201,7 +201,7 @@ filename "kapitel7.schaltkreis2formel.lyx"
 
 \begin_inset CommandInset include
 LatexCommand include
-filename "kapitel8.lokalität.lyx"
+filename "kapitel8.lokalitaet.lyx"
 
 \end_inset
 
