--- a/postmortem/kapitel6.partitionen.lyx
+++ b/postmortem/kapitel6.partitionen.lyx
@@ -589,7 +589,7 @@ Der Mengenstabilisator von
 \end_layout
 
 \begin_layout Standard
-\begin_inset Separator parbreak
+\begin_inset Separator plain
 \end_inset
 
 
