--- a/postmortem/kapitel7.schaltkreis2formel.tex
+++ b/postmortem/kapitel7.schaltkreis2formel.tex
@@ -1237,7 +1237,7 @@ Für~$\bar{t}\in U^{k}$:~
 \begin{lyxcode}
 Gib~$\Omega\left(\bar{t}\right)=g'$~aus.
 \end{lyxcode}
-NF($1,g,g'$).
+NF($1,g,g',\textsc{True}$).
 \end{lyxcode}
 \end{lyxcode}
 \end{lyxcode}
