--- a/postmortem/kapitel7.schaltkreis2formel.lyx
+++ b/postmortem/kapitel7.schaltkreis2formel.lyx
@@ -5347,7 +5347,7 @@ Gib
 \end_deeper
 \begin_layout LyX-Code
 NF(
-\begin_inset Formula $1,g,g'$
+\begin_inset Formula $1,g,g',\textsc{True}$
 \end_inset
 
 ).
